
Version (SVN)
-------------

XML:   Resolved issue CASTOR-1419 using contribution from Jason Mihalick [jason@jCraftsmen.com]
       Fixed problem with NPE in SAXAny (related to the use of namespaces).
       Details: http://jira.codehaus.org/browse/CASTOR-1419
       (Werner - 20060525)

XML:   Resolved issue CASTOR-1427 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for unmarshalling attributes of type byte[].
       Details: http://jira.codehaus.org/browse/CASTOR-1427
       (Werner - 20060524)

XML:   Resolved issue CASTOR-690 using contribution from Doug Berkland [berkland@spamcop.net]
       Fixed problem with location attribute in the context of extend hierarchies.
       Details: http://jira.codehaus.org/browse/CASTOR-690
       (Werner - 200605024)

XML:   Resolved issue CASTOR-1415 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Upgraded Jakarta commons logging to 1.1.
       Details: http://jira.codehaus.org/browse/CASTOR-1415
       (Werner - 20060523)

XML:   Resolved issue CASTOR-1420 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed a problem with the application of naming conventions in introspection mode.
       Details: http://jira.codehaus.org/browse/CASTOR-1420
       (Werner - 20060523)

JDO:   Resolved issue CASTOR-1424 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Renamed tables of CTF tests in ctf.jdo.tc7x package.
       Details: http://jira.codehaus.org/browse/CASTOR-1424
       (Werner - 20060523)
       
JDO:   Resolved issue CASTOR-1423 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Moved the remaining 10 CTF tests (JDO) to new ctf.jdo.tc7x package.
       Details: http://jira.codehaus.org/browse/CASTOR-1423
       (Werner - 200605008)

JDO:   Resolved issue CASTOR-1408 using contribution from Werner Guttmann [werner.guttmann@gmx.net]